tests/baselines/reference/contextualTyping11.errors.txt
tests/cases/compiler/contextualTyping11.ts(1,13): error TS2322: Type 'foo[]' is not assignable to type '{ id: 数字; }[]'.
  Type 'foo' is not assignable to type '{ id: 数字; }'.
    Property 'id' is missing in type 'foo'.


==== tests/cases/compiler/contextualTyping11.ts (1 errors) ====
    class foo { public bar:{id:number;}[] = [<foo>({})]; }
                ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
!!! error TS2322: Type 'foo[]' is not assignable to type '{ id: 数字; }[]'.
!!! error TS2322:   Type 'foo' is not assignable to type '{ id: 数字; }'.
!!! error TS2322:     Property 'id' is missing in type 'foo'.